connected fronted and backend for booking and notification flow